--- a/Michaelsoft.ContentManager.Server/appsettings.Development.json
+++ b/Michaelsoft.ContentManager.Server/appsettings.Development.json
@@ -6,9 +6,25 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
+  "EncryptionSettings": {
+    "DataEncryptionKey": "***",
+    "DataEncryptionIv": "***"
+  },
   "ContentStoreDatabaseSettings": {
     "ContentsCollectionName": "***",
     "ConnectionString": "***",
     "DatabaseName": "***"
+  },
+  "TokenStoreDatabaseSettings": {
+    "TokensCollectionName": "***",
+    "ConnectionString": "***",
+    "DatabaseName": "***"
+  },
+  "JwtSettings": {
+    "Secret": "***",
+    "Issuer": "ContentManagerServer",
+    "Audience": "ContentManagerClients",
+    "AccessExpiration": 30,
+    "RefreshExpiration": 60
   }
 }
