working file upload, TODO: filename with content hash, read content, delete content.

--- a/Michaelsoft.ContentManager.Server/appsettings.Development.json
+++ b/Michaelsoft.ContentManager.Server/appsettings.Development.json
@@ -15,6 +15,9 @@
     "ConnectionString": "***",
     "DatabaseName": "***"
   },
+  "MediaStorageSettings": {
+    "Path": "D:\\tmp\\media"
+  },
   "TokenStoreDatabaseSettings": {
     "TokensCollectionName": "***",
     "ConnectionString": "***",
